hack/demo-ingress/ingress-dns-list.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    acl-manager.konst.fish/list: example.com
  name: ingress-dns-list
  namespace: acl-manager
spec:
  ingressClassName: totally-real-ingress-class
  rules:
  - host: example.com
    http:
      paths:
      - backend:
          service:
            name: nginx-service
            port:
              number: 80
        path: /
        pathType: Prefix
